--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
